--- a/scl/default-network-drivers/plugin.conf
+++ b/scl/default-network-drivers/plugin.conf
@@ -24,6 +24,7 @@
 block source default-network-drivers(
 	udp-port(514)
 	tcp-port(514)
+	tcp-max-connections(10)
 	rfc5424-tls-port(6514)
 	rfc5424-tcp-port(601)
 	log-msg-size(65536)
@@ -36,6 +37,7 @@ block source default-network-drivers(
 		source {
 			network(transport(tcp)
 				port(`tcp-port`)
+				max-connections(`tcp-max-connections`)
 				log-msg-size(`log-msg-size`)
 				flags(no-parse, `flags`)
 				hook-commands(`hook-commands`));
